# cg_ray_tracer

./: CMakeLists.txt  Camera.cpp  Camera.h  KDTree.cpp  KDTree.h  Light.h  Mesh.cpp  Mesh.h  NormalCoord.cpp  NormalCoord.h  README.md  Random.h  Renderer.cpp  Renderer.h  Utils.cpp  Utils.h  defs.h  main.cpp  out.ppm
libs/glm/: CMakeLists.txt
libs/glm/detail/: type_quat.hpp
libs/glm/ext/: quaternion_common.hpp  scalar_relational.inl  vector_common.hpp
libs/glm/gtc/: type_precision.hpp  type_ptr.hpp
libs/glm/gtx/: intersect.hpp  io.inl  matrix_query.hpp  norm.hpp  rotate_vector.hpp  string_cast.hpp  transform2.hpp  type_trait.hpp  vector_angle.hpp
models/cbox-simple/: cbox-simple.mtl  cbox.c4d  cbox.exr  cbox.mb  cbox.mtl
models/diningroom-simple/: diningroom-simple.c4d  diningroom.exr
models/diningroom-simple/.mayaSwatches/: dinningroom.mb.swatches
models/multi-balls/: multi-balls.mtl
models/others/: sphere.c4d
models/refraction/: refraction.mtl
models/veach_mis/: mis.exr  mis.mb
models/veach_mis/.mayaSwatches/: mis.mb.swatches
results/: cbox-256.ppm  cbox-8.ppm  diningroom-1024.ppm  diningroom-512.ppm  diningroom-8.ppm  mis-1024.ppm  mis-512-gamma-phong.ppm  mis-512-gamma.ppm  room-8.ppm  veach_mis-512.ppm  veach_mis-8.ppm
src/: Camera.cpp  Camera.h  KDTree.h  Light.cpp  Light.h  Mesh.h  NormalCoord.h  Random.cpp  Random.h  Renderer.cpp  Renderer.h  Utils.cpp  Utils.h  configs.h  defs.h  main.cpp
src/camera/: Camera.cpp  Camera.h
src/kdtree/: KDTree.cpp  KDTree.h
src/light/: Light.h
src/mesh/: Mesh.cpp  Mesh.h
src/renderer/: Renderer.cpp  Renderer.h
src/utils/: NormalCoord.h  Random.h  Utils.cpp  Utils.h  defs.h
